--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 	<head></head>
 	<body>
 		<h1>Hello, Festival Tycoon!</h1>
+		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+		<script src="Scripts/main.js"></script>
 	</body>
 </html>
