--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head></head>
 	<body>
-		<h1>Hello, Festival Tycoon!</h1>
+		<h4>Work Harder!</h4>
 		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		<script src="Scripts/main.js"></script>
 	</body>
