--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head></head>
 	<body>
 		<h4>Work Harder!</h4>
-		<button><img src = "/Images/Play_Sprite.png" /> </button>
+		<button style = "position: absolute; right: 15%;"><img src = "/Images/Play_Sprite.png" /> </button>
 		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		<script src="Scripts/main.js"></script>
 	</body>
