--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head></head>
 	<body>
 		<h4>Work Harder!</h4>
-		<button style = "background-color: rgb(255, 255, 255); position: absolute; right: 1%; text-align: center"><img src = "/Images/Play_Sprite.png" /> </button>
+		<button style = "border-radius: 8px; background-color: rgb(255, 255, 255); position: absolute; right: 1%; text-align: center"><img src = "/Images/Play_Sprite.png" /> </button>
 		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		<script src="Scripts/main.js"></script>
 	</body>
