--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head></head>
-	<body>
-		<h4>Work Harder!</h4>
-		<button style = "border-radius: 8px; background-color: rgb(255, 255, 255); position: absolute; right: 1%; text-align: center"><img src = "/Images/Play_Sprite.png" /> </button>
+	<body style = "background-color: rgb(16, 93, 171);">
+		<h3>Something</h3>
+		<button style = "border-radius: 8px; background-color: rgb(255, 255, 255); position: absolute; right: 24%; text-align: center"><img src = "/Images/Play_Sprite.png" /> </button>
+		<img align = "right" src= "Images/Global_Logo.jpg" width = "100" height = "100"/></img>
 		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		<script src="Scripts/Stage.js"></script>
 		<script src="Scripts/stages.js"></script>
