--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<button style = "border-radius: 8px; background-color: rgb(255, 255, 255); position: absolute; right: 24%; text-align: center"><img src = "/Images/Play_Sprite.png" /> </button>
 		<img align = "right" src= "Images/Global_Logo.jpg" width = "100" height = "100"/></img>
 		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+		
 		<script src="Scripts/Stage.js"></script>
 		<script src="Scripts/stages.js"></script>
+		<script src="Scripts/Person.js"></script>
 		<script src="Scripts/main.js"></script>
 	</body>
 </html>
