Make start button work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head></head>
 	<body style = "background-color: rgb(16, 93, 171);">
 		<h3>Something</h3>
-		<button style = "border-radius: 8px; background-color: rgb(255, 255, 255); position: absolute; right: 24%; text-align: center"><img src = "/Images/Play_Sprite.png" /> </button>
+		<button style = "border-radius: 8px; background-color: rgb(255, 255, 255); position: absolute; right: 24%; text-align: center" onclick="start()"><img src = "/Images/Play_Sprite.png" /> </button>
 		<img align = "right" src= "Images/Global_Logo.jpg" width = "100" height = "100"/></img>
 		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		
