--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/marmoset.css">	
+	</head>
 	<body style = "background-color: rgb(16, 93, 171);">
-		<h3>Something</h3>
-		<button style = "border-radius: 8px; background-color: rgb(255, 255, 255); position: absolute; right: 24%; text-align: center" onclick="start()"><img src = "/Images/Play_Sprite.png" /> </button>
-		<img align = "right" src= "Images/Global_Logo.jpg" width = "100" height = "100"/></img>
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="jumbotron">					
+					<img src="Images/snowbombing_logo.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div id="gameHolder"></div>					
+				</div>
+				<div class="col">
+					<button style = "border-radius: 8px; background-color: rgb(255, 255, 255);" onclick="start()">
+						<img src = "/Images/Play_Sprite.png" /> 
+					</button>
+				</div>
+			</div>
+		</div>
+
 		<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		
 		<script src="Scripts/Stage.js"></script>
 		<script src="Scripts/stages.js"></script>
