--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+			<script
+			src="http://code.jquery.com/jquery-3.3.1.min.js"
+			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/marmoset.css">	
 	</head>
@@ -19,6 +23,7 @@
 					<button style = "border-radius: 8px; background-color: rgb(255, 255, 255);" onclick="start()">
 						<img src = "/Images/Play_Sprite.png" /> 
 					</button>
+					<div id="stage"></div>
 				</div>
 			</div>
 		</div>
