Generate peopleJourneys.js from journeys.js

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 		
 		<script src="Scripts/Stage.js"></script>
 		<script src="Scripts/stages.js"></script>
+		<script src="Data/journeys.js"></script>
+		<script src="Scripts/days.js"></script>
+		<script src="Scripts/GameTime.js"></script>
+		<script src="Scripts/Journey.js"></script>
 		<script src="Scripts/Person.js"></script>
 		<script src="Scripts/performances.js"></script>
 		<script src="Scripts/main.js"></script>
