--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body style = "background-color: rgb(16, 93, 171);">
 			<div class="container">
 			<div class="row justify-content-center">
-					<img src="Images/snowbombing_logo.png">
+					<img class="logo" src="Images/snowbombing_logo.png">
 			</div>
 			
 					<div class="row">
@@ -21,7 +21,7 @@
 							<div class="col-sm-3" >
 								<div class="right-col">
 									<button style = "border-radius: 8px; background-color: rgb(255, 255, 255);" onclick="start()">
-											<img src = "/Images/Play_Sprite.png" /> 
+											<img id="playButton" src="/Images/Play_Sprite.png" /> 
 										</button>
 										<h2 id="stage"></h2>
 										<div id="performances"></div>
