capable demo of 2 days

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<script src="Scripts/Journey.js"></script>
 		<script src="Scripts/Person.js"></script>
 		<script src="Scripts/performances.js"></script>
+		<script src="Scripts/peopleJourneys.js"></script>
 		<script src="Scripts/main.js"></script>
 	</body>
 </html>
